Closed
Bug 750853
Opened 13 years ago
Closed 13 years ago
mozilla/a11y/Role.h:817: error: comma at end of enumerator list
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: gaston, Assigned: hub)
References
Details
Attachments
(1 file, 1 obsolete file)
|
782 bytes,
patch
|
hub
:
review+
|
Details | Diff | Splinter Review |
http://hg.mozilla.org/mozilla-central/diff/330f6adec1ec/accessible/src/base/Role.h broke the build on OpenBSD with the error message in summary.. fix in a few.
| Reporter | ||
Comment 2•13 years ago
|
||
Attachment #620036 -
Flags: review?(hub)
| Assignee | ||
Updated•13 years ago
|
Attachment #620036 -
Flags: review?(hub) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
let me know if you need somebody to land it.
| Reporter | ||
Comment 4•13 years ago
|
||
(In reply to Hub Figuiere [:hub] from comment #3)
> let me know if you need somebody to land it.
Well, yes since i can't land it myself :)
Keywords: checkin-needed
| Assignee | ||
Comment 5•13 years ago
|
||
will land it once m-i is reopen.
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 6•13 years ago
|
||
Actually, I'll let the checkin team do it. Putting back the keyword.
Keywords: checkin-needed
| Assignee | ||
Comment 7•13 years ago
|
||
| Assignee | ||
Comment 8•13 years ago
|
||
Comment on attachment 620107 [details] [diff] [review]
Remove trailing comma at end of enumerator list, breaks build on OpenBSD.
Updated with proper commit message checkin. Thanks !
Attachment #620107 -
Flags: review+
| Assignee | ||
Updated•13 years ago
|
Attachment #620036 -
Attachment is obsolete: true
| Reporter | ||
Comment 9•13 years ago
|
||
It seems there's another breakage related to #716644..
../../dist/bin/libxul.so.1.0: undefined reference to `nsAccessibleWrap::AtkRoleFor(mozilla::a11y::roles::Role)'
But the code is there in nsAccessibleWrap.cpp and is not #ifdef'ed out...
| Assignee | ||
Comment 10•13 years ago
|
||
For that last one, make sure you have
https://hg.mozilla.org/mozilla-central/rev/992588c2eab6
| Reporter | ||
Comment 11•13 years ago
|
||
Ah that might be https://hg.mozilla.org/mozilla-central/rev/992588c2eab6 from https://bugzilla.mozilla.org/show_bug.cgi?id=716644#c65 which i didnt have yet in my checkout.
| Reporter | ||
Comment 12•13 years ago
|
||
Confirmed, that was it.
Comment 13•13 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla15
Updated•13 years ago
|
Flags: in-testsuite-
Comment 14•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•