Bug 750853 - Remove trailing comma at end of enumerator list, breaks build on OpenBSD, r=hub